<!--Did I Take My Meds? is a FOSS app to keep track of medications
    Did I Take My Meds? is designed to help prevent a user from skipping doses and/or overdosing
    Copyright (C) 2021  Noah Stanford <noahstandingford@gmail.com>

    Did I Take My Meds? is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Did I Take My Meds? is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses.-->
<resources>
    <string name="app_name">Did I Take My Meds?</string>
    <string name="add">Add</string>
    <string name="add_medications">Add medications to your list</string>
    <string name="medication_name">Medication name</string>
    <string name="description">Description</string>
    <string name="select_a_time">select a time</string>
    <string name="time_picker_tag" translatable="false">time_picker</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="pick_a_time">Pick a time before saving</string>
    <string name="fill_fields">Fill out name before saving</string>
    <string name="med_saved">Medication saved</string>
    <string name="cancelled">New medication cancelled</string>
    <string name="time_24">H:mm</string>
    <string name="time_12">h:mma</string>
    <string name="sample_medicine">Sample Medicine</string>
    <string name="midnight">12:00AM</string>
    <string name="sample_description">This is a sample description of a medication. It has multiple sentences and covers multiple lines.</string>
    <string name="previous_doses">Previous doses:</string>
    <string name="i_just_took_it">I just took it!</string>
    <string name="closest_dose_sample">Closest dose: 1:00PM today</string>
    <string name="med_position_key" translatable="false">medication_position</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="closest_dose_label">Closest dose: %1$s</string>
    <string name="already_took_dose">You already took this dose\nI hope you didn\'t take it again</string>
    <string name="date_format">MMM d, yyyy</string>
    <string name="time_taken">Time taken: %1$s</string>
    <string name="delete">delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="medication_delete_warning">The medication will be permanently deleted</string>
    <string name="confirm">confirm</string>
    <string name="took_this_already">You took this already</string>
    <string name="edit">Edit</string>
    <string name="edit_cancelled">Edit cancelled</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="channel_name" translatable="false">did_i_take_my_meds</string>
    <string name="channel_description">reminder notifications</string>
    <string name="med_id_key" translatable="false">med_id</string>
    <string name="time_for_your_dose">Time for your dose</string>
    <string name="new_medication">New Medication</string>
    <string name="medication_details">Medication Details</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="about">About</string>
    <string name="app_description">v%1$s by Noah Stanford (aka CorruptedArk)\n\nDid I Take My Meds? is a FOSS app to keep track of medications\nDid I Take My Meds? is designed to help prevent a user from skipping doses and/or overdosing\nCopyright © 2021  Noah Stanford noahstandingford@gmail.com\n\nDid I Take My Meds? is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nDid I Take My Meds? is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see https://www.gnu.org/licenses.</string>
    <string name="support_me_on_liberapay">Support me on Liberapay</string>
    <string name="view_the_project_on_github">View the project on GitHub</string>
    <string name="github_link" translatable="false">https://github.com/CorruptedArk/did-i-take-my-meds</string>
    <string name="liberapay_link" translatable="false">https://liberapay.com/CorruptedArk</string>
    <string name="play_release" translatable="false">playRelease</string>
    <string name="sorry">Sorry!</string>
    <string name="okay">Okay</string>
    <string name="cannot_donate_explanation">Google doesn\'t allow developers to place donation links in apps to support themselves if they are not tax exempt charities. If you still want to support me, you can find CorruptedArk on Liberapay in a separate browser. My GitHub repository is a good place to start.</string>
    <string name="last_version_used_key" translatable="false">last_version_used</string>
    <string name="add_another_dose">Add another dose</string>
    <string name="taken_as_needed">Taken as needed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_start_date">Start date</string>
    <string name="time_between_doses">Time between doses:</string>
    <string name="days">Day(s)</string>
    <string name="weeks">Week(s)</string>
    <string name="months">Month(s)</string>
    <string name="years">Year(s)</string>
    <string name="schedule_dose">Schedule dose</string>
    <string name="schedule_picker_tag" translatable="false">schedule_picker</string>
    <string name="date_picker_tag" translatable="false">date_picker</string>
    <string name="schedule_format">%1$s\nStarts %2$s\nRepeats every\n%3$d day(s), %4$d week(s),\n%5$d month(s), %6$d year(s)</string>
    <string name="utc" translatable="false">UTC</string>
    <string name="fill_out_all_schedules">Fill out all schedules before saving</string>
    <string name="fill_out_schedule">Fill out schedule before confirming</string>
    <string name="next_dose_label">Next dose: %1$s</string>
    <string name="taken">Taken</string>
    <string name="not_taken">Not taken</string>
    <string name="sort">Sort</string>
    <string name="sort_key" translatable="false">Sort</string>
    <string name="restore_database">Restore database</string>
    <string name="back_up_database">Back up database</string>
    <string name="database_is_invalid">Database is invalid</string>
    <string name="database_restored">Database restored</string>
    <string name="took_it">Took it</string>
    <string name="app_name_short">DITMM?</string>
    <string name="remind_in_15">Remind in 15 minutes</string>
    <string name="dose_record_delete_warning">The dose record will be permanently deleted.</string>
    <string name="record_delete_hint">(Long click a record to delete it)</string>
    <string name="time_since_dose_sample">Approximately 0 day(s), 0 hour(s), and 0 minute(s) since last taken dose</string>
    <string name="time_since_dose_template">Approximately %1$d day(s), %2$d hour(s), and %3$d minute(s) since last taken dose</string>
    <string name="require_photo_proof">Require photo proof</string>
    <string name="image_path" translatable="false">images</string>
    <string name="file_provider" translatable="false">dev.corruptedark.diditakemymeds.fileprovider</string>
    <string name="dose_and_proof_saved">Dose and proof saved</string>
    <string name="failed_to_get_proof">Failed to get proof</string>
    <string name="dose_time_key" translatable="false">dose_time</string>
    <string name="no_image_available">No image available</string>
    <string name="temp_dir" translatable="false">tmp</string>
    <string name="record_detail_hint">(Tap a record to view details)</string>
    <string name="time_taken_key" translatable="false">time_taken</string>
    <string name="take_med_key" translatable="false">take_med</string>
    <string name="back_up_successful">Back up successful</string>
    <string name="back_up_failed">Back up failed</string>
    <string name="dose_details">Dose Details</string>
    <string name="medication_active">Medication active</string>
    <string name="inactive">Inactive</string>
    <string name="medication_type">Medication Type</string>
    <string name="undefined">Undefined</string>
    <string name="type_label_format">Type: %1$s</string>
    <string name="sample_type_label">Type: Undefined</string>
    <string name="rx_number_hint">Rx #</string>
    <string name="rx_number_label_format">Rx #: %1$s</string>
    <string name="sample_rx_number_label">Rx #: Undefined</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="pharmacy_label_format">Pharmacy: %1$s</string>
    <string name="sample_pharmacy_label">Pharmacy: Undefined</string>
    <string name="dose_unit">Dose Unit</string>
    <string name="dose_amount">Dose Amount</string>
    <string name="dose_amount_label_format">%1$s%2$s per dose</string>
    <string name="sample_dose_amount_label">5mg per dose</string>
    <string name="remaining_doses">Remaining Doses</string>
    <string name="sample_remaining_doses_label">10 remaining doses</string>
    <string name="remaining_doses_label_format">%1$d remaining doses</string>
    <string name="no_remaining_doses_message">There are no doses remaining\nIf this is wrong, update the remaining doses by editing the medication</string>
    <string name="take_with_food">Take with food</string>
    <string name="translation_credits">Brazilian Portuguese translations by mezysinc on GitHub, lnux-usr on GitHub, and Card151915 on Weblate\n\nGerman translations by jpameli on GitHub\n\nFrench translations by Edanas on Weblate\n\nHebrew translations by Yaron on Weblate\n\nChinese Simplified translations by luxu on Weblate\n\nSpanish translations by sguinetti on Weblate, caos30 on Weblate, and nzgha on Weblate\n\nCatalan translations by caos30 on Weblate\n\nBug fix by johannes87 on GitHub\n\n</string>
    <string name="app_widget_description">A widget that displays a single medication, the time since the last taken dose, and a button to submit a taken dose</string>
    <string name="choose_a_medication">Choose A Medication</string>
    <string name="dose_update_warning">You will update the taken time of this dose and delete the associated proof image if it exists.</string>
    <string name="birth_control_schedule">Birth control schedule</string>
    <string name="_21_7">21 + 7</string>
    <string name="_63_7">63 + 7</string>
    <string name="was_this_dose_really_taken">Was this dose really taken?</string>
    <string name="remaining_doses_correction_message">If not, the number of remaining doses will be corrected</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

</resources>