<?xml version="1.0" encoding="utf-8"?>
<!--Did I Take My Meds? is a FOSS app to keep track of medications
    Did I Take My Meds? is designed to help prevent a user from skipping doses and/or overdosing
    Copyright (C) 2021  Noah Stanford <noahstandingford@gmail.com>

    Did I Take My Meds? is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Did I Take My Meds? is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses.-->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MedDetailActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:gravity="center_vertical" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/outer_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/sub_purple"
                app:autoSizeTextType="uniform"
                android:textSize="32sp"
                android:padding="20dp"
                android:text="@string/sample_medicine"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200"
                app:autoSizeTextType="uniform"
                android:textSize="28sp"
                android:padding="20dp"
                android:text="@string/midnight"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notification_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_enabled"
                android:textColor="@color/purple_200"
                app:autoSizeTextType="uniform"
                android:textSize="28sp"
                android:padding="20dp"
                android:checked="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform"
                android:textSize="25sp"
                android:padding="10dp"
                android:text="@string/sample_description"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/closest_dose_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200"
                app:autoSizeTextType="uniform"
                android:textSize="23sp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:text="@string/closest_dose_sample"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/just_took_it_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="20dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:text="@string/i_just_took_it"
                android:textColor="@color/purple_200"
                app:strokeColor="@color/purple_500"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/previous_doses_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200"
                app:autoSizeTextType="uniform"
                android:textSize="25sp"
                android:padding="20dp"
                android:text="@string/previous_doses"/>

            <ListView
                android:id="@+id/previous_doses_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>