<?xml version="1.0" encoding="utf-8"?>
<!--Did I Take My Meds? is a FOSS app to keep track of medications
    Did I Take My Meds? is designed to help prevent a user from skipping doses and/or overdosing
    Copyright (C) 2021  Noah Stanford <noahstandingford@gmail.com>

    Did I Take My Meds? is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Did I Take My Meds? is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses.-->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AddMedActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:gravity="center_vertical"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_name"
                app:hintTextColor="@color/purple_200"
                android:textColorHint="@color/purple_200"
                app:boxStrokeColor="@color/purple_500"
                app:boxBackgroundColor="@color/item_background"
                app:hintTextAppearance="@style/TextLabel"
                style="@style/Theme.TextInput"
                android:theme="@style/Theme.TextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/med_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_type"
                app:hintTextColor="@color/purple_200"
                android:textColorHint="@color/purple_200"
                app:boxStrokeColor="@color/purple_500"
                app:boxBackgroundColor="@color/item_background"
                app:hintTextAppearance="@style/TextLabel"
                style="@style/Theme.TextInput.ExposedDropdownMenu"
                android:theme="@style/Theme.TextInput.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/med_type_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:hint="@string/medication_type"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/as_needed_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taken_as_needed"
                android:textColor="@color/purple_200"
                app:autoSizeTextType="uniform"
                android:textSize="28sp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"
                android:checked="false"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/require_photo_proof_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/require_photo_proof"
                android:textColor="@color/purple_200"
                app:autoSizeTextType="uniform"
                android:textSize="28sp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"
                android:checked="false"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/repeat_schedule_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"
                android:textSize="18sp"
                android:text="@string/schedule_dose"
                android:textColor="@color/purple_200"
                app:strokeColor="@color/purple_500"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/schedule_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/extra_dose_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingVertical="15dp"
                android:textSize="20sp"
                android:text="@string/add_another_dose"
                app:icon="@drawable/add_box"
                app:iconGravity="textStart"
                android:textColor="@color/purple_200"
                app:strokeColor="@color/purple_500"
                app:iconTint="@color/purple_200"
                android:visibility="visible"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notification_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_enabled"
                android:textColor="@color/purple_200"
                app:autoSizeTextType="uniform"
                android:textSize="28sp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"
                android:checked="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:hint="@string/description"
                app:hintTextColor="@color/purple_200"
                android:textColorHint="@color/purple_200"
                app:boxStrokeColor="@color/purple_500"
                app:boxBackgroundColor="@color/item_background"
                app:hintTextAppearance="@style/TextLabel"
                style="@style/Theme.TextInput"
                android:theme="@style/Theme.TextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/med_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="start|top"
                    android:minLines="4"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>