<?xml version="1.0" encoding="utf-8"?>
<!--Did I Take My Meds? is a FOSS app to keep track of medications
    Did I Take My Meds? is designed to help prevent a user from skipping doses and/or overdosing
    Copyright (C) 2021  Noah Stanford <noahstandingford@gmail.com>

    Did I Take My Meds? is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Did I Take My Meds? is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses.-->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:gravity="center_vertical"
        app:contentInsetStartWithNavigation="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/view_github_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:paddingVertical="12dp"
                android:text="@string/view_the_project_on_github"
                android:textColor="@android:color/black"
                app:backgroundTint="@color/github"
                android:textSize="@dimen/medium_text_size"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/support_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:paddingVertical="12dp"
                android:text="@string/support_me_on_liberapay"
                android:textColor="@android:color/black"
                app:backgroundTint="@color/liberapay"
                android:textSize="@dimen/medium_text_size"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/translation_credits_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/translation_credits"
                android:textSize="@dimen/small_text_size"
                android:paddingTop="20dp"
                android:paddingHorizontal="20dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/app_description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_description"
                android:textSize="@dimen/small_text_size"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"/>

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>