<?xml version="1.0" encoding="utf-8"?>
<!--Did I Take My Meds? is a FOSS app to keep track of medications
    Did I Take My Meds? is designed to help prevent a user from skipping doses and/or overdosing
    Copyright (C) 2021  Noah Stanford <noahstandingford@gmail.com>

    Did I Take My Meds? is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Did I Take My Meds? is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses.-->
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#252525"
    android:paddingVertical="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_200"
        autoSizeTextType="uniform"
        android:textSize="25sp"
        android:paddingHorizontal="10dp"
        android:text="@string/sample_medicine"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_label"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sub_purple"
            autoSizeTextType="uniform"
            android:textSize="18sp"
            android:paddingHorizontal="10dp"
            android:text="@string/midnight"
            android:gravity="left"
            android:layout_gravity="left"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_weight="1"
            android:id="@+id/taken_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sub_purple"
            autoSizeTextType="uniform"
            android:textSize="18sp"
            android:paddingHorizontal="10dp"
            android:text="@string/not_taken"
            android:gravity="right"
            android:layout_gravity="right"/>
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>